--- a/Pipfile
+++ b/Pipfile
@@ -3,6 +3,9 @@ url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
+[packages]
+rich = "==1.4.0"
+
 [dev-packages]
 "flake8" = "*"
 pytest = "*"
